# database_agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 2026_01_13_2246-b730beacbefb_add_pgvector_to_query_log.py  2026_01_18_1948-42ff66ad5775_add_vector_similarity_index.py  2026_01_24_2122-3778a3c2bf82_create_kg_error_summary_table.py  2026_01_31_2307-a61bfae926a3_increase_user_feedback_column_size.py  229b2ea4cfc5_fix_error_patterns_unique_constraint.py  a281dc260eac_add_query_memory_enhancements.py  aa70b5c7598f_create_kg_storage_tables.py
config/: settings.py
ecommerce_db/: setup_ecommerce_db.py  verify_ecommerce_db.py
healthcare_db/: setup_ecommerce_db.py  verify_healthcare_db.py
scripts/: build_kg.py  example_use_kg.py  kg_export.json  run_agent.py
src/: openai_client.py
src/agents/: __init__.py  base_agent.py  executor_validator_agent.py  schema_selector_agent.py  sql_generator_agent.py
src/agents/tools/: __init__.py  clarification_tool.py  graph_traversal_tool.py  llm_filter_tool.py  query_memory_tool.py  sql_validation_tool.py  vector_search_tool.py
src/api/: agent_service.py
src/kg/builders/: kg_builder.py
src/kg/extractors/: __init__.py  column_extractor.py  relationship_extractor.py  schema_extractor.py  table_extractor.py
src/kg/generators/: __init__.py  (+3 more)
src/memory/: __init__.py  error_summary_manager.py  query_memory_repository.py
src/orchestration/: __init__.py  agent_state.py  error_router.py  workflow_graph.py
streamlit_app/: app.py  components.py  config.py
(+9 files in other folders)
