[project]
name = "database-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "chromadb>=1.4.0",
    "langfuse>=3.11.2",
    "langgraph>=1.0.5",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlparse>=0.5.5",
    "streamlit>=1.53.1",
    "streamlit-agraph>=0.0.45",
]
